chore: get value from env file
